calibre/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: calibre
  namespace: calibre
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts: 
    - calibre.bo0tzz.me
    secretName: calibre-web-tls
  rules:
  - host: calibre.bo0tzz.me
    http:
      paths:
      - path: /
        backend:
          serviceName: calibre
          servicePort: http
